fix autofocus search input, search icon ui alignment

--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ input[type="text"] {
   position: absolute;
   left: 8px;
   color: #6c757d;
+  transform: translateY(-25%);
 }
 
 #searchInput {
